<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.TipCalculator">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="190dp"
            android:layout_height="77dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="-50dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:inputType="numberDecimal"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/icon_service"
            android:layout_width="24dp"
            android:layout_height="33dp"
            android:layout_marginStart="35dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:srcCompat="@drawable/ic_service" />

        <ImageView
            android:id="@+id/icon_cost"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="35dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/textField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textField"
            app:srcCompat="@drawable/ic_store" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/how_was_the_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.266"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField" />

        <RadioGroup
            android:id="@+id/tipOption"
            android:layout_width="320dp"
            android:layout_height="162dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="12dp"
            android:checkedButton="@id/tip_option_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:id="@+id/tip_option_20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/amazing_20" />

            <RadioButton
                android:id="@+id/tip_option_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/good_18" />

            <RadioButton
                android:id="@+id/tip_option_15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/okay_15" />
        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="31dp"
            android:layout_height="27dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/roundUpSwitch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipOption"
            app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/roundUpSwitch"
            android:layout_width="281dp"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipOption" />

        <Button
            android:id="@+id/button"
            android:layout_width="323dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="27dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roundUpSwitch" />

        <TextView
            android:id="@+id/tipResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            tools:text="Tip Amount: Rp10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>